<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rebel_gripper</name>
  <version>0.1.0</version>
  <description>Package for the Rebel Gripper by Igus with articulated fingers.</description>
  <maintainer email="johannes.weyel@et.hs-fulda.de">fdet0203</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>